# life-simulator

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/life_simulator/: __main__.py
src/life_simulator/config/: log.py  settings.py
src/life_simulator/persistence/: __init__.py  save_load.py
src/life_simulator/simulation/: ecosystem.py  entity.py  genome.py  spatial.py  stats.py  world.py  worldgen.py
src/life_simulator/ui/: camera.py  map_screen.py  render.py  screen.py  setup_screen.py  sim_screen.py
tests/: test_ecosystem.py  test_genome.py  test_save_load.py  test_stats.py  test_worldgen.py
