[project]
name = "life-simulator"
version = "0.1.0"
description = "A 2D life/evolution simulator with a configurable world and ecosystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "opensimplex>=0.4.5.1",
    "pygame-ce>=2.5.7",
    "pygame-gui>=0.6.14",
]

[project.scripts]
life-sim = "life_simulator.__main__:main"

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/life_simulator"]

# --- Ruff ------------------------------------------------------------------

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["life_simulator"]

# --- Pytest ----------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
