[project]
name = "life-simulator"
version = "0.1.0"
description = "A 2D life/evolution simulator with a configurable world and ecosystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "opensimplex>=0.4.5.1",
    "pygame-ce>=2.5.7",
    "pygame-gui>=0.6.14",
]

[project.scripts]
life-sim = "life_simulator.__main__:main"

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pylint>=4.0.6",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/life_simulator"]

# --- Ruff ------------------------------------------------------------------

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["life_simulator"]

# --- Pytest ----------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]

# --- Pylint ----------------------------------------------------------------

[tool.pylint.main]
py-version = "3.11"
# pygame's constants (K_*, SRCALPHA, ...) live in a C extension that static
# analysis cannot see, producing spurious no-member errors. Skip member checks
# for the package; ruff + tests cover real misuse.
ignored-modules = ["pygame"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-positional-arguments = 10
max-locals = 25

[tool.pylint."messages control"]
disable = [
    "missing-function-docstring",    # test functions are self-describing
    "missing-class-docstring",       # small dataclasses / config holders
    "import-outside-toplevel",       # deliberate lazy imports break screen cycles
    "cyclic-import",                 # setup_screen <-> sim_screen via lazy import
    "broad-exception-caught",        # save/load + pygame pump guards log & continue
    "unused-argument",               # Screen interface methods accept unused params
    "protected-access",              # tests assert on internals (e.g. Genome._BOUNDS)
    "wrong-import-position",         # __main__ configures logging before imports
    "wrong-import-order",            # import ordering is owned by ruff (isort)
    "ungrouped-imports",             # ditto
    "too-many-instance-attributes",  # UI screens hold many widgets; _Vals is a snapshot
]
